--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
         </div>
     </container>
 
+<!--Footer-->
     <footer class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
